solution/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: api-release
spec:
  host: api-release
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
